# gimp-plugin-pixel-art-scalers

./: .gitignore  Makefile  README.md
src/: Makefile.am  common_ris.c  common_ris.h  filter-pixel-art-scalers.c  filter_dialog.c  filter_dialog.h  filter_pixel_art_scalers.c  filter_pixel_art_scalers.h  filter_scalers.c  filter_scalers.h  filter_scalex.c  filter_scalex.h  filter_utils.c  filter_utils.h  gsample.c  gsample.h  hq2x.c  hq3x.c  hq4x.c  hqx.h  hqx_common.h  hqx_init.c  hris.c  hris.h  libpas.h  reduce.c  reduce.h  scaler_nearestneighbor.c  scaler_nearestneighbor.h  scaler_scalex.c  scaler_scalex.h  xbr.c  xbr_common.h  xbr_filters.h
src/gtk2/: filter_pixel_art_scalers.c  filter_scalers.c  filter_utils.c  filter_utils.h
src/lib/: hq2x.c  hq3x.c  hq4x.c  hqx_common.h  hqx_init.c  scaler_nearestneighbor.c  scaler_scalex.c  scaler_scalex.h  xbr.c  xbr_filters.h
